Fix image error and make it visible on screen again

--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ td {
 @media only screen and (min-width: 35em) {
 
   .about-content {
-    bottom: 102.2em;
+    bottom: 10em;
     position: absolute;
     width: 100%;
 
